--- a/Healthtechbd/App.xaml
+++ b/Healthtechbd/App.xaml
@@ -40,7 +40,7 @@
                 <Setter Property="FontSize" Value="14" />
             </Style>
 
-            <Style TargetType="ComboBox" x:Key="ComboBox" >
+            <Style TargetType="ComboBox" x:Key="DiagnosisComboBox" >
                 <Setter Property="Foreground" Value="#7d7d7d"/>
                 <Setter Property="BorderBrush" Value="#eee"/>
                 <Setter Property="Margin" Value="0 0 0 14"/>
