--- a/Healthtechbd/ChangePassword.xaml
+++ b/Healthtechbd/ChangePassword.xaml
@@ -20,7 +20,7 @@
 
             <Border Margin="20 0 0 0">
                 <StackPanel Orientation="Horizontal">
-                    <TextBlock Style="{StaticResource BreadcrumbItem}" Grid.Column="1" Text="Doctor" />
+                    <TextBlock Style="{StaticResource BreadcrumbItem}" Grid.Column="1" Text="Doctor" MouseDown="CancelChangePassword_Click"/>
                     <TextBlock Style="{StaticResource BreadcrumbItem}" Grid.Column="2" Text="/" />
                     <TextBlock Style="{StaticResource BreadcrumbItem}" Grid.Column="0" Text="Change Password"/>
                 </StackPanel>
@@ -69,7 +69,7 @@
         <Grid Height="60" Background="#E3E7EB" >
 
             <StackPanel Orientation="Horizontal" Margin="20 0 0 0">
-                <Button x:Name="CancelChangePassword" Content="CANCEL" HorizontalAlignment="Left" Margin="0 0 20 0" BorderThickness="0" FontWeight="SemiBold" FontSize="12" Height="35"  Background="#3CC2BB" />
+                <Button x:Name="CancelChangePassword" Content="CANCEL" HorizontalAlignment="Left" Margin="0 0 20 0" BorderThickness="0" FontWeight="SemiBold" FontSize="12" Height="35"  Background="#3CC2BB" Click="CancelChangePassword_Click" />
                 <Button x:Name="SubmitChangePassword" Content="SUBMIT" HorizontalAlignment="Left" BorderThickness="0" FontWeight="SemiBold" FontSize="12" Height="35"  Background="#3CC2BB" Click="SubmitChangePassword_Click" />
             </StackPanel>
 
